@@ -11,6 +11,8 @@
 	* info/infodoc.c (HELP_NODE_GETS_REGENERATED)
 	(internal_info_help_node_contents): Removed.
 
+	* info/session.c (read_key_sequence): Rewrite for clarity.
+
 2014-11-07  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/session.c (info_dispatch_on_key, read_key_sequence):
